feat(auth): allow users to update their profiles
